fix: wrap slider in container

--- a/src/components/slider/card/card.module.css
+++ b/src/components/slider/card/card.module.css
@@ -1,14 +1,7 @@
 .card {
-    position: absolute;
-    left: 5%;
-    top: 5%;
-    z-index: 1;
-
     width: 550px;
-
     background-color: white;
     padding: 40px;
-
 }
 
 .card p {
