--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -5,6 +5,14 @@
     overflow: hidden;
 }
 
+.container {
+    position: absolute;
+    height: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
 .wrapper {
     position: relative;
     width: 100%;
